@startuml
class com.proyect.notification.ReminderWorker {
- Context context
- WorkerParameters params
+ ListenableWorker.Result doWork()
}


class com.proyect.notification.NotificationSettingsActivity {
- {static} int REQUEST_CODE
# void onCreate(Bundle)
# void onResume()
- void openAppSettings()
}


class com.proyect.notification.NotificationHelper {
- {static} Context context
- String CHANNEL_ID
+ {static} long getSecondsUntilEvent(Event)
+ {static} void createWorkRequest(String,String,String,String,long)
+ {static} void cancelAllWorkRequests(String)
+ {static} void cancelWorkRequest(String)
+ {static} void enqueueNotifications(Context,Event,long)
+ void createNotification(String,String,String)
+ void createNotificationChannel(Notification)
}




androidx.work.Worker <|-- com.proyect.notification.ReminderWorker
androidx.appcompat.app.AppCompatActivity <|-- com.proyect.notification.NotificationSettingsActivity
@enduml